fix(config): make stdout safety unconditional instead of profile-gated
spring.profiles.default only applies when the active profile set is empty,
so SPRING_PROFILES_ACTIVE=dev dropped all four stdout guards at once and
started Tomcat while logging to the MCP protocol channel (6026 bytes on
stdout, reproduced with the packaged jar).

Move the guards back to the unprofiled application.yml and have the http
profile override each one explicitly. An unknown profile now degrades to
working stdio instead of a broken hybrid.

Also: CI to JDK 21, README states the Java 21 runtime requirement, and
HttpTransportIT now verifies the cache its name claims to exercise.